La page de présentation et sa feuille de style

--- a/presentation.html
+++ b/presentation.html
@@ -6,9 +6,9 @@
     </head>
  
     <body>
-        <img id="photoJournalLumineux" src="photoJournalLumineuxCIEL.jpg" alt="BTS CIEL sur l'afficheur" />    
-        <section id="presentation">
             
+        <section id="presentation">
+            <img id="photoJournalLumineux" src="photoJournalLumineuxCIEL.jpg" alt="journal" /> 
                 <!-- Le code HTML décrivant la page -->
                 <link rel="stylesheet" href="presentation.css" />
                 <h1>Les journaux lumineux de l'établissement</h1>
