--- a/liste.html
+++ b/liste.html
@@ -8,7 +8,8 @@
     <body>
         <section id="liste">
             <link rel="stylesheet" href="style.css" />
-<table>
+            <h2>Liste des journaux lumineux</h2>
+        <table>
 <tr>
 <th>SALLE </th>
 <th>ADRESSE IP</th>
@@ -31,7 +32,7 @@
 </tr>
 <tr>
 <td>CE2 A </td>
-<td>172.20.21.234</td>
+<td>172.20.21.158</td>
 </tr>
 <tr>
 <td>CE2 B </td>
@@ -53,11 +54,6 @@
 <td>172.20.21.239</td>
 </tr>
 </table>
-
-
-
-
-
 
         </section>
     </body>
