--- a/presentation.html
+++ b/presentation.html
@@ -9,8 +9,7 @@
             
         <section id="presentation">
             <img id="photoJournalLumineux" src="photoJournalLumineuxCIEL.jpg" alt="journal" /> 
-                <!-- Le code HTML décrivant la page -->
-                <link rel="stylesheet" href="presentation.css" />
+                <link rel="stylesheet" href="style.css" />
                 <h1>Les journaux lumineux de l'établissement</h1>
                 <p>Notre établissement scolaire a décidé d'installer des journaux lumineux dans toutes les salles de classes. Ces journaux lumineux auront principalement 2 rôles :</p>
         <ul>
