La mise en page de la grille CSS

--- a/liste.html
+++ b/liste.html
@@ -9,14 +9,15 @@
         <section id="liste">
             <link rel="stylesheet" href="style.css" />
             <h2>Liste des journaux lumineux</h2>
-        <table>
+            <table>
+    <tbody>
 <tr>
 <th>SALLE </th>
 <th>ADRESSE IP</th>
 </tr>    
 <tr>
-<td>CP A </td>
-<td>172.20.21.230</td>
+<td>SALLE A6 </td>
+<td>172.20.21.157</td>
 </tr>
 <tr>
 <td>CP B </td>
@@ -31,7 +32,7 @@
 <td>172.20.21.233</td>
 </tr>
 <tr>
-<td>CE2 A </td>
+<td>SALLE A7 </td>
 <td>172.20.21.158</td>
 </tr>
 <tr>
@@ -53,6 +54,7 @@
 <td>CM2 B </td>
 <td>172.20.21.239</td>
 </tr>
+    </tbody>
 </table>
 
         </section>
